Added support for mixing a named entity recognition phase into the correction stack

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -1,7 +1,7 @@
 
 # ReynirCorrect.conf
 # Configuration settings for the reynir-correct package
-# Copyright (C) 2018 Miðeind ehf
+# Copyright (C) 2019 Miðeind ehf
 
 
 [unique_errors]
@@ -817,6 +817,9 @@ Sjíti
 Súnníti
 evrópa
 sjálfstæðismaður
+Lenínismi
+Marxismi
+Darwinismi
 
 # !!! TODO: Expand following list of countries and related adjectives
 
