Added unique errors; removed 'Kristni' from upper/lower case check

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -51,6 +51,7 @@
 "ekkki", "ekki"
 "fanns", "fannst"
 "ferkar", "frekar"
+"fék", "fékk"
 "fingu", "fingur"
 "fjórfallt", "fjórfalt"
 "fjögura", "fjögurra"
@@ -63,7 +64,7 @@
 "fyr", "fyrr"
 "fyrs", "fyrst"
 "fyst", "fyrst"
-"fék", "fékk"
+"fyirr", "fyrir"
 "gegnst", "gengst"
 "gengdi", "gegndi"
 "gengdu", "gegndu"
@@ -806,7 +807,7 @@ Gyðingur
 Helvíti
 Himnaríki
 Kaþólska
-Kristni
+# Kristni # !!! Rekst á mannsnafnið 'Kristinn' í þgf.
 Kristindómur
 Mótmælendatrú
 Múhameðstrú
