Additions and edits to config

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -35,6 +35,16 @@
 "auvðitað", "auðvitað"
 "auðvita", "auðvitað"
 "aþr", "þar"
+"ábygð", "ábyrgð"
+"áðann", "áðan"
+"áfam", "áfram"
+"áfarm", "áfram"
+"áfarmhaldandi", "áframhaldandi"
+"áftur", "aftur"
+"áhri", "áhrif"
+"átjan", "átján"
+"átjanda", "átjánda"
+"átjá", "átján"
 "Björgvinn", "Björgvin"
 "bárus", "bárust"
 "bæum", "bæjum"
@@ -53,6 +63,7 @@
 "ferkar", "frekar"
 "fék", "fékk"
 "fingu", "fingur"
+"fjármálafyrirækja", "fjármálafyrirtækja"
 "fjórfallt", "fjórfalt"
 "fjögura", "fjögurra"
 "fjörtíu", "fjörutíu"
@@ -65,6 +76,7 @@
 "fyrs", "fyrst"
 "fyst", "fyrst"
 "fyirr", "fyrir"
+"fyrirækja", "fyrirtækja"
 "gegnst", "gengst"
 "gengdi", "gegndi"
 "gengdu", "gegndu"
@@ -86,6 +98,9 @@
 "innann", "innan"
 "islam", "íslam"
 "islams", "íslams"
+"íllt", "illt"
+"Íslendignar", "Íslendingar"
+"Íslendignur", "Íslendingur"
 "jafvel", "jafnvel"
 "jamt", "jafnt"
 "janframt", "jafnframt"
@@ -122,9 +137,11 @@
 "nýji", "nýi"
 "nýjir", "nýir"
 "nýu", "nýju"
+"ókeipis", "ókeypis"
 "pragt", "prakt"
 "reindar", "reyndar"
 "ringdi", "rigndi"
+"ríkisfyrirækja", "ríkisfyrirtækja"
 "ríkistjórn", "ríkisstjórn"
 "ríkistjórnar", "ríkisstjórnar"
 "ríkistjórnin", "ríkisstjórnin"
@@ -157,6 +174,7 @@
 "síðstu", "síðustu"
 "síðus", "síðust"
 "sólarmeginn", "sólarmegin"
+"teyja", "teygja"
 "tvöfallt", "tvöfalt"
 "tífallt", "tífalt"
 "tóskt", "tókst"
@@ -168,22 +186,8 @@
 "vekjir", "vekir"
 "virðst", "virst"
 "yfi", "yfir"
-"ábygð", "ábyrgð"
-"áfam", "áfram"
-"áfarm", "áfram"
-"áfarmhaldandi", "áframhaldandi"
-"áftur", "aftur"
-"áhri", "áhrif"
-"átjan", "átján"
-"átjanda", "átjánda"
-"átjá", "átján"
-"áðann", "áðan"
-"ætlaru", "ætlarðu"
-"ættiru", "ættirðu"
-"íllt", "illt"
-"Íslendignar", "Íslendingar"
-"Íslendignur", "Íslendingur"
-"ókeipis", "ókeypis"
+"þanig", "þannig"
+"þanngað", "þangað"
 "þáttakandi", "þátttakandi"
 "þáttakanda", "þátttakanda"
 "þáttakendur", "þátttakendur"
@@ -197,8 +201,6 @@
 "þáttakendurna", "þátttakendurna"
 "þáttakendunum", "þátttakendunum"
 "þáttakendanna", "þátttakendanna"
-"þanig", "þannig"
-"þanngað", "þangað"
 "þe", "þ.e."
 "þei", "þeir"
 "þeira", "þeirra"
@@ -209,6 +211,8 @@
 "þrefallt", "þrefalt"
 "þu", "þú"
 "þvi", "því"
+"ætlaru", "ætlarðu"
+"ættiru", "ættirðu"
 
 
 [allowed_multiples]
@@ -394,11 +398,16 @@ yrði
 "annaðslagið", "annað slagið"
 "austanfrá", "austan frá"
 "austanmegin", "austan megin"
+"austanmeginn", "austan megin"  # Og n/nn villa
 "austantil", "austan til"
 "austureftir", "austur eftir"
 "austurfrá", "austur frá"
 "austurfyrir", "austur fyrir"
+"áðuren", "áður en"
 "áeftir", "á eftir"
+"ámeðal", "á meðal"
+"ámilli", "á milli"
+"áttahundruð", "átta hundruð"
 "bakatil", "baka til"
 "báðumegin", "báðum megin"
 "eftirað", "eftir að"
@@ -464,6 +473,7 @@ yrði
 "héreftir", "hér eftir"
 "hérmeð", "hér með"
 "hérnamegin", "hérna megin"
+"hérnameginn", "hérna megin"    # Og n/nn villa
 "hérumbil", "hér um bil"
 "innanfrá", "innan frá"
 "innanum", "innan um"
@@ -528,6 +538,7 @@ yrði
 "seinnihluti", "seinni hluti"
 "seinnihluta", "seinni hluta"
 "semsagt", "sem sagt"
+"semsé", "sem sé"
 "sexhundruð", "sex hundruð"
 "sigrihrósandi", "sigri hrósandi"
 "síðanað", "síðan að"
@@ -549,6 +560,7 @@ yrði
 "suðurí", "suður í"
 "suðurmeð", "suður með"
 "suðvestantil", "suðvestan til"
+"sumsé", "sem sé"
 "svoað", "svo að"
 "svokallaður", "svo kallaður"
 "svosem", "svo sem"
@@ -582,6 +594,18 @@ yrði
 "utanundir", "utan undir"
 "utanvið", "utan við"
 "utaná", "utan á"
+"úrþvíað", "úr því að"
+"útaf", "út af"
+"útá", "út á"
+"útávið", "út á við"
+"útfrá", "út frá"
+"útfyrir", "út fyrir"
+"útifyrir", "út fyrir"
+"útivið", "út við"
+"útí", "út í"
+"útundan", "út undan"
+"útúr", "út úr"
+"útvið", "út við"
 "vegnaþess", "vegna þess"
 "vestanfrá", "vestan frá"
 "vestantil", "vestan til"
@@ -597,25 +621,6 @@ yrði
 "víðsfjarri", "víðs fjarri"
 "víðsvegar", "víðs vegar"
 "yfirum", "yfir um"
-"ámeðal", "á meðal"
-"ámilli", "á milli"
-"áttahundruð", "átta hundruð"
-"áðuren", "áður en"
-"öðruhverju", "öðru hverju"
-"öðruhvoru", "öðru hvoru"
-"öðrumegin", "öðrum megin"
-"úrþvíað", "úr því að"
-"útaf", "út af"
-"útfrá", "út frá"
-"útfyrir", "út fyrir"
-"útifyrir", "út fyrir"
-"útivið", "út við"
-"útundan", "út undan"
-"útvið", "út við"
-"útá", "út á"
-"útávið", "út á við"
-"útí", "út í"
-"útúr", "út úr"
 "ýmiskonar", "ýmiss konar"
 "ýmisskonar", "ýmiss konar"
 "þangaðsem", "þangað sem"
@@ -641,10 +646,9 @@ yrði
 "þvínæst", "því næst"
 "þínmegin", "þín megin"
 "þóað", "þó að"
-"semsé", "sem sé"
-"sumsé", "sem sé"
-"austanmeginn", "austan megin"  # Og n/nn villa
-"hérnameginn", "hérna megin"    # Og n/nn villa
+"öðruhverju", "öðru hverju"
+"öðruhvoru", "öðru hvoru"
+"öðrumegin", "öðrum megin"
 
 
 [split_compounds]
@@ -661,11 +665,15 @@ all góður
 allsherjar atkvæðagreiðsla
 allsherjar breyting
 allsherjar neyðarútkall
+# alþjóða =vísu
 and stæðingur
 auka herbergi
 auð sveipur
 aðal inngangur
 aðaldyra megin
+ágætis maður
+áratuga reynsla
+áratuga skeið
 bakborðs megin
 bakdyra megin
 blæja logn
@@ -685,6 +693,9 @@ gegn drepa
 ger breyta
 gjalda megin
 gjör breyta
+grundvallar atriði
+grundvallar forsenda
+grundvallar innviðir
 heildar staða
 hlé megin
 hálf undarlegur
@@ -698,7 +709,10 @@ karla megin
 klukkustundar frestur
 kring um
 kvenna megin
+lang bestur
+lang minnstur
 lang stærstur
+lang verstur
 langtíma aukaverkun
 langtíma lán
 langtíma markmið
@@ -716,6 +730,9 @@ lágmarks stærð
 lágmarks áhætta
 lítils verður
 marg oft
+meðal aðgengi
+meðal biðtími
+meðal ævilengd
 megin atriði
 megin forsenda
 megin land
@@ -729,9 +746,6 @@ megin ágreiningur
 megin ákvörðun
 megin áveitukerfi
 mest allur
-meðal aðgengi
-meðal biðtími
-meðal ævilengd
 mis bjóða
 mis breiður
 mis heppnaður
@@ -745,12 +759,12 @@ næst bestur
 næst komandi
 næst síðastur
 næst verstur
+óhemju illa
+óhemju vandaður
+óskapa hiti
+óvenju góður
 sam skeyti
 saman standa
-sjávar megin
-skammtíma skuld
-skammtíma vistun
-svo kallaður
 sér framboð
 sér herbergi
 sér inngangur
@@ -762,27 +776,24 @@ sér íslenskur
 sér þekking
 sér þvottahús
 sí felldur
+sjávar megin
+skammtíma skuld
+skammtíma vistun
 sólar megin
+svo kallaður
 tor læs
 undra góður
 uppáhalds bragðtegund
 uppáhalds fag
+úrvals hveiti
 van megnugur
 van virða
 vel ferð
 vel kominn
 vel megun
 vel vild
-ágætis maður
-áratuga reynsla
-áratuga skeið
-óhemju illa
-óhemju vandaður
-óskapa hiti
-óvenju góður
 önd verður
 ör magna
-úrvals hveiti
 
 # Split into 3 words
 #heils dags starf
