Better handling of error-tagged nonterminals; bug fix in token span

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -205,6 +205,7 @@
 "þei", "þeir"
 "þeira", "þeirra"
 "þeiri", "þeirri"
+"þes", "þess"
 "þgear", "þegar"
 "þin", "þín"
 "þo", "þó"
@@ -915,6 +916,7 @@ múhameðstrúarmaður	múslími_kk
 
 # unique multiword errors, dealt with in errtokenizer.py
 
+á faraldsferli             		$error(WRONG_WORD, á faraldsfæti)
 af eigin frumkvæði          	$error(AÐAF, að eigin frumkvæði)
 af fyrra bragði             	$error(AÐAF, að fyrra bragði)
 af gefnu tilefni            	$error(AÐAF, að gefnu tilefni)
@@ -994,6 +996,11 @@ hreint fyrir sýnum dyrum		$error(YI, hreint fyrir sínum dyrum)
 hvað á þetta að þíða			$error(YI, hvað á þetta að þýða)
 hvaðanæva að af landinu     	$error(REDUNDANT_WORD, hvaðanæva af landinu)
 hún vil                     	$error(WRONG_PERSON, hún vill)
+kom að fjöllum                  $error(AÐAF, kom af fjöllum)
+komst að fjöllum                $error(AÐAF, komst af fjöllum)
+komu að fjöllum                 $error(AÐAF, komu af fjöllum)
+komuð að fjöllum                $error(AÐAF, komuð af fjöllum)
+komum að fjöllum                $error(AÐAF, komum af fjöllum)
 krók á götu sýna				$error(YI, krók á götu sína)
 kvað eftir annað				$error(KHV, hvað eftir annað)
 kvað hangir á spýtunni			$error(KHV, hvað hangir á spýtunni)
