Started adaptation to Icegrams

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -929,6 +929,8 @@ af engu leyti              		$error(AÐAF, að engu leyti)
 af mestu leyti              	$error(AÐAF, að mestu leyti)
 af miklu leyti              	$error(AÐAF, að miklu leyti)
 af neinu leyti              	$error(AÐAF, að neinu leyti)
+af þessu leyti              	$error(AÐAF, að þessu leyti)
+af því leyti              		$error(AÐAF, að því leyti)
 af verulegu leyti              	$error(AÐAF, að verulegu leyti)
 af talsverðu leyti             	$error(AÐAF, að talsverðu leyti)
 af öllu leyti               	$error(AÐAF, að öllu leyti)
@@ -950,6 +952,8 @@ að hjartans lyst            	$error(AÐAF, af hjartans lyst)
 að hvaða tilefni            	$error(AÐAF, af hvaða tilefni)
 að einhverju leiti              $error(YI, að einhverju leyti)
 að engu leiti               	$error(YI, að engu leyti)
+að þessu leiti               	$error(YI, að þessu leyti)
+að því leiti               		$error(YI, að því leyti)
 að mestu leiti					$error(YI, að mestu leyti)
 að miklu leiti              	$error(YI, að miklu leyti)
 að neinu leiti               	$error(YI, að neinu leyti)
