Deleted spelling.pickle file

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
+release.sh
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
