Added context to spell checker; modified probability calculations; added DEBUG setting

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -3,6 +3,9 @@
 # Configuration settings for the reynir-correct package
 # Copyright (C) 2019 Miðeind ehf
 
+[settings]
+
+DEBUG = true
 
 [unique_errors]
 
