Added detection of foreign language text; suggestions in .conf file

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -918,6 +918,14 @@ múhameðstrú			íslam_hk
 múhameðstrúarmaður	múslími_kk
 
 
+[suggestions]
+
+# Suggestions of alternative words
+
+móment				augnablik_hk
+séns                möguleiki_kk tækifæri_hk
+
+
 [multiword_errors]
 
 # unique multiword errors, dealt with in errtokenizer.py
