Added check for correct capitalization of month names

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -178,6 +178,7 @@
 "síðstu", "síðustu"
 "síðus", "síðust"
 "sólarmeginn", "sólarmegin"
+"td", "t.d."
 "teyja", "teygja"
 "tvöfallt", "tvöfalt"
 "tífallt", "tífalt"
@@ -928,7 +929,10 @@ séns                möguleiki_kk tækifæri_hk
 
 [multiword_errors]
 
-# unique multiword errors, dealt with in errtokenizer.py
+# Unique multiword errors, dealt with in errtokenizer.py
+# !!! Note: some of these actually should apply to all
+# !!! declension forms of the erroneous phrase, not just
+# !!! the form given here.
 
 á faraldsferli             		$error(WRONG_WORD, á faraldsfæti)
 af eigin frumkvæði          	$error(AÐAF, að eigin frumkvæði)
@@ -1037,7 +1041,10 @@ kver heilvita maður				$error(KHV, hver heilvita maður)
 kver með sínu nefi				$error(KHV, hver með sínu nefi)
 kver sem vettlingi getur valdið	$error(KHV, hver sem vettlingi getur valdið)
 kver veit nema					$error(KHV, hver veit nema)
-kynferðislegt áreiti			$error(WRONG_WORD, kynferðisleg áreitni)
+# The following doesn't work since 'kynferðislegt áreiti' can
+# be either nominative or accusative case, and since we don't know
+# at correction time which one it is, we can't substitute the correct declension
+# kynferðislegt áreiti			$error(WRONG_WORD, kynferðisleg áreitni)
 leifi frá störfum				$error(YI, leyfi frá störfum)
 leiðir skyldi					$error(YI, leiðir skildi)
 lifandi líst					$error(YI, lifandi lýst)
@@ -1071,7 +1078,7 @@ með bestu list					$error(YI, með bestu lyst)
 með orðum líst					$error(YI, með orðum lýst)
 með tillit til              	$error(WRONG_CASE, með tilliti til)
 mikið magn af               	$error(REDUNDANT_WORD, mikið af)    # also called pleonasm
-miklum mun meira            	$error(REDUNDANT_WORD, mun meira) # eða 'miklu meira'
+miklum mun meira            	$error(REDUNDANT_WORD, mun meira) 	# eða 'miklu meira'
 oft á tíðum                 	$error(WRONG_WORD, oft og tíðum)
 orði né eyði					$error(YI, orði né eiði)
 réttu megin                 	$error(WRONG_GENDER, réttum megin)
