Added checks for extraneous 'sem', 'að' and commas; separated time stamps for grammar files between ReynirCorrect and ReynirPackage

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -48,6 +48,7 @@
 "átjan", "átján"
 "átjanda", "átjánda"
 "átjá", "átján"
+"ávaxtardrykkur", "ávaxtadrykkur"
 "Björgvinn", "Björgvin"
 "bárus", "bárust"
 "bæum", "bæjum"
@@ -689,6 +690,7 @@ einskis verður
 endur úthluta
 farþega megin
 fjölda margir
+fangelsis dómur
 for maður
 forkunnar fagur
 frum stæður
@@ -778,7 +780,7 @@ sér kennari
 sér staða
 sér stæði
 sér vitringur
-sér íslenskur
+# sér íslenskur # skemmir 'að útvega sér íslenska bankareikninga'
 sér þekking
 sér þvottahús
 sí felldur
@@ -1073,6 +1075,7 @@ lýti á klukkuna					$error(YI, líti á klukkuna)
 lýti í allar áttir				$error(YI, líti í allar áttir)
 lýti í eigin barm				$error(YI, líti í eigin barm)
 lýti í kringum					$error(YI, líti í kringum)
+margra árabil					$error(WRONG_WORD, margra ára bil)
 meira og minna              	$error(WRONG_WORD, meira eða minna)
 með bestu list					$error(YI, með bestu lyst)
 með orðum líst					$error(YI, með orðum lýst)
