Always consider words not found in BÍN as rare; relaxed check for potential abbreviations

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -706,9 +706,11 @@ grundvallar forsenda
 grundvallar innviðir
 heildar staða
 hlé megin
+hálf frosinn
 hálf undarlegur
 hálfs mánaðarlega
 hálftíma gangur
+hvata stjórnun
 innvortis blæðing
 jafn framur   # oftast 'jafn framt'
 jafn lyndur
