Added correction of 'víðfemd'

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -191,6 +191,11 @@
 "vekji", "veki"
 "vekjir", "vekir"
 "virðst", "virst"
+"víðfemd", "víðfeðm"
+"víðfemdur", "víðfeðmur"
+"víðfemt", "víðfeðmt"
+"víðfemdir", "víðfeðmir"
+"víðfemdar", "víðfeðmar"
 "yfi", "yfir"
 "þanig", "þannig"
 "þanngað", "þangað"
