Changed and enhanced logic for grammar checking messages; added VillaÍTölu

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -121,6 +121,7 @@
 "m.a", "m.a."
 "mart", "margt"
 "misskilingur", "misskilningur"
+"miskilningur", "misskilningur"
 "múslimi", "múslími"
 "múslima", "múslíma"
 "múslimar", "múslímar"
@@ -155,6 +156,7 @@
 "ríkistjórnarinnar", "ríkisstjórnarinnar"
 "sagð", "sagði"
 "samkynhneiðra", "samkynhneigðra"
+"sexý", "sexí"
 "silgdi", "sigldi"
 "silgdu", "sigldu"
 "silgt", "siglt"
@@ -199,6 +201,7 @@
 "yfi", "yfir"
 "þanig", "þannig"
 "þanngað", "þangað"
+"þáttaka", "þátttaka"
 "þáttakandi", "þátttakandi"
 "þáttakanda", "þátttakanda"
 "þáttakendur", "þátttakendur"
@@ -219,6 +222,7 @@
 "þes", "þess"
 "þgear", "þegar"
 "þin", "þín"
+"þikir", "þykir"
 "þo", "þó"
 "þrefallt", "þrefalt"
 "þu", "þú"
@@ -442,7 +446,7 @@ yrði
 "enganveginn", "engan veginn"
 "ennfrekar", "enn frekar"
 "ennfremur", "enn fremur"
-"ennþá", "enn þá"
+# "ennþá", "enn þá"  # ???
 "fimmhundruð", "fimm hundruð"
 "fimmtuhlutar", "fimmtu hlutar"
 "fjórðuhlutar", "fjórðu hlutar"
@@ -693,6 +697,7 @@ brekku megin
 bílstjóra megin
 einskis verður
 endur úthluta
+enn þá
 farþega megin
 fjölda margir
 fangelsis dómur
