--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -14,6 +14,7 @@
 "a", "á"
 "aftu", "aftur"
 "aftúr", "aftur"
+"afþreyingum", "afþreyingu"
 "ahnn", "hann"
 "akstu", "akstur"
 "aldei", "aldrei"
@@ -779,6 +780,7 @@ næst bestur
 næst komandi
 næst síðastur
 næst verstur
+prinsipp mál
 óhemju illa
 óhemju vandaður
 óskapa hiti
