Added correction for errors previously tolerated in Reynir/Vocab.conf

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -32,6 +32,8 @@
 "andyri", "anddyri"
 "annahvort", "annaðhvort" # Getur líka verið 'annað hvort'
 "annarar", "annarrar"
+# "annara", "annarra"  # Getur líka verið 'mér er annara um köttinn en hundinn'
+"annari", "annarri"
 "annarr", "annar"
 "arsemi", "arðsemi"
 "athygi", "athygli"
@@ -95,6 +97,7 @@
 "huxi", "hugsi"
 "hvaðann", "hvaðan"
 "hvorutveggja", "hvort tveggja"
+"hyggðist", "hygðist"
 "hyggðust", "hygðust"
 "héllt", "hélt"
 "héðann", "héðan"
@@ -112,6 +115,7 @@
 "kannske", "kannski"
 "kanski", "kannski"
 "komsat", "komast"
+"kjóli", "kjól"  # Kjóll í þgf.
 "kvar", "hvar"
 "kvenær", "hvenær"
 "kversu", "hversu"
@@ -221,6 +225,9 @@
 "þeira", "þeirra"
 "þeiri", "þeirri"
 "þes", "þess"
+"þessarra", "þessara"
+"þessarri", "þessari"
+"þessarrar", "þessarar"
 "þgear", "þegar"
 "þin", "þín"
 "þikir", "þykir"
@@ -1138,6 +1145,7 @@ við líði                    	$error(YI, við lýði)
 í tilefni að                    $error(AÐAF, í tilefni af)
 í því skini						$error(YI, í því skyni)
 ítrustu varúðar             	$error(YI, ýtrustu varúðar)
+ýmis konar                      $error(WRONG_WORD, ýmiss konar)
 ósk sýna uppfyllta       		$error(YI, ósk sína uppfyllta)
 öðru hvoru megin            	$error(WRONG_GENDER, öðrum hvorum megin)
 öðruhvoru megin             	$error(WRONG_GENDER, öðrum hvorum megin)
