Added VillaEndingIR for errors such as 'ég setti kókið í kælir'; added correction of 'frá hvort öðru'

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -1026,6 +1026,7 @@ en þann dag í dag				$error(N, enn þann dag í dag)
 en þá í dag						$error(N, enn þá í dag)
 engu að síður               	$error(WRONG_WORD, eigi að síður)  # (mælt með)
 erlendis frá                	$error(WRONG_PHRASE, frá útlöndum)
+frá hvort öðru                  $error(WRONG_WORD, frá hvoru öðru)
 fríður sínum					$error(YI, fríður sýnum)
 fótum sýnum forráð				$error(YI, fótum sínum forráð)
 gefur að líta               	$error(WRONG_WORD, getur að líta)
