Added check for erroneous '-ana' suffix instead of '-anna' in possessive case

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -152,6 +152,7 @@
 "pragt", "prakt"
 "reindar", "reyndar"
 "ringdi", "rigndi"
+"ríksins", "ríkisins"
 "ríkisfyrirækja", "ríkisfyrirtækja"
 "ríkistjórn", "ríkisstjórn"
 "ríkistjórnar", "ríkisstjórnar"
