--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -428,7 +428,6 @@
 "eingögnu", "eingöngu"
 "einhvað", "eitthvað"
 "einhven", "einhver"
-"einhversslags", "einhvers lags"
 "einhvert", "eitthvert"
 "einingis", "einungis"
 "einkaðilar", "einkaaðilar"
@@ -3007,8 +3006,10 @@ yrði
 "einhvernveginn", "einhvern veginn"
 "einhverskonar", "einhvers konar"
 "einhversskonar", "einhvers konar"
-"einhversstaðar", "einhvers staðar"
+"einhverslags", "einhvers lags"
+"einhversslags", "einhvers lags"
 "einhverstaðar", "einhvers staðar"
+"einhversstaðar", "einhvers staðar"
 "einskisvirði", "einskis virði"
 "einskona", "eins konar"
 "einskonar", "eins konar"
