Added display of noun phrase in correct case, when showing impersonal verb subject errors

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -3198,7 +3198,7 @@ yrði
 "suðurí", "suður í"
 "suðvestantil", "suðvestan til"
 "svoað", "svo að"
-"svokallaður", "svo kallaður"
+# "svokallaður", "svo kallaður"
 "svosem", "svo sem"
 "svosemeins", "svo sem eins"
 "svotil", "svo til"
