Polished annotation texts; added detail to annotations

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -42,6 +42,13 @@
 "ahfa", "hafa"
 "ahn", "hann"
 "ahnn", "hann"
+"akgrein", "akrein"
+"akgreinar", "akreinar"
+"akgreinum", "akreinum"
+"akgreina", "akreina"
+"akgreinarnar", "akreinarnar"
+"akgreinunum", "akreinunum"
+"akgreinanna", "akreinanna"
 "akkurat", "akkúrat"
 "akkúrrat", "akkúrat"
 "akrílmálningu", "akrýlmálningu"
@@ -68,8 +75,14 @@
 "algent", "algengt"
 "algör", "algjör"
 "alkahólisma", "alkóhólisma"
+"alkahólisminn", "alkóhólisminn"
+"alkahólismann", "alkóhólismann"
+"alkahólismanum", "alkóhólismanum"
+"alkahólismans", "alkóhólismans"
 "alkahólista", "alkóhólista"
 "alkahólisti", "alkóhólisti"
+"alkahólistar", "alkóhólistar"
+"alkahólistum", "alkóhólistum"
 "allaf", "alltaf"
 "allann", "allan"
 "allanvega", "allavega"
