Minor additions to spelling.py and ReynirCorrect.conf

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -3774,6 +3774,7 @@ um þetta leiti					$error(YI, um þetta leyti)
 undir beran himinn				$error(WRONG_CASE, undir beran himin)
 utan að landi               	$error(AÐAF, utan af landi)
 verða vitni af					$error(AÐAF, verða vitni að)
+varð vitni af					$error(AÐAF, varð vitni að)
 vilja sýnum framgengt			$error(YI, vilja sínum framgengt)
 við líði                    	$error(YI, við lýði)
 á morgnanna                 	$error(N, á morgnana)
