--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   - python -m pip install git+https://github.com/mideind/Tokenizer#egg=tokenizer
   - python -m pip install git+https://github.com/mideind/ReynirPackage#egg=reynir
   - python -m pip install git+https://github.com/mideind/Icegrams#egg=icegrams
-  - python setup.py install
+  - python setup.py develop
 
 script:
   - python -m pytest
