Fixes for various error constructs

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -2544,6 +2544,7 @@
 "ölllu", "öllu"
 "ölllum", "öllum"
 "öllun", "öllum"
+"öllsömun", "öllsömul"
 "ölvunnar", "ölvunar"
 "örbrigð", "örbirgð"
 "örggum", "öruggum"
@@ -2680,6 +2681,7 @@
 "Þórðarssyni", "Þórðarsyni"
 "Þórðason", "Þórðarson"
 "Þórðs", "Þórðar"
+"þæginlegt", "þægilegt"
 "þöggunnar", "þöggunar"
 "þúsundur", "þúsundir"
 "Þýslalandi", "Þýskalandi"
@@ -3209,8 +3211,8 @@ yrði
 
 # alþjóða vísu
 # sér íslenskur # skemmir 'að útvega sér íslenska bankareikninga'
-# öll sömul # ???
-# öll sömun # ???
+öll sömul
+öll sömun       # Á sennilega að vera 'öllsömul'
 afar kostur
 afbragðs fagur
 afbragðs góður
@@ -3471,7 +3473,8 @@ fjöl		+kk +kvk +hk +lo +so
 for			+kk +kvk +hk +lo +so
 forkunnar   +kk +kvk +hk +lo +ao
 frum        +kk +kvk +hk +lo +so +ao
-full		+kk +kvk +hk +lo +so +ao
+# full		+kk +kvk +hk +lo +so +ao
+full		+kk +lo +so +ao             # Removed +kvk and +hk cf. 'full ástæða', 'full réttindi'
 furðu		+lo
 gagn		+kk +kvk +hk +lo +so
 ger			+lo +so +ao					# Can attach to nouns, but uncommon.
@@ -3495,6 +3498,7 @@ ofur        +kk +kvk +hk +lo +so +ao    # Attached to nouns and verbs, free with
 ramm		+lo +ao
 sam         +kk +kvk +hk +lo +so +ao
 # saman		+kk +kvk +hk +lo +so		# Mostly with lh.þt. of verbs that take 'saman' as a particle. TODO too common
+# saman		+lo		                    # Allow 'samansúrraður', 'samansaumuð'
 skammtíma	+kk +kvk +hk
 # sér		+kk +kvk +hk				# TODO The pronoun is too common. Have to deal with these errors later.
 sí          +kk +kvk +hk +lo +so +ao
@@ -3829,7 +3833,8 @@ við líði                    	$error(YI, við lýði)
 öðru hvoru megin            	$error(WRONG_GENDER, öðrum hvorum megin)
 öðruhvoru megin             	$error(WRONG_GENDER, öðrum hvorum megin)
 öndverðu meiði					$error(WRONG_WORD, öndverðum meiði)
-öll sömun						$error(WRONG_WORD, öll sömul)
+öll sömul						$error(WRONG_WORD, öllsömul)
+öll sömun						$error(WRONG_WORD, öllsömul)
 þar til yfir líkur				$error(YI, þar til yfir lýkur)
 það vil                     	$error(WRONG_PERSON, það vill)
 þíðir ekkert að					$error(YI, þýðir ekkert að)
