Add pattern matching in pattern.py; refactoring; added rudimentary typing support

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -950,6 +950,8 @@
 "hundruðir", "hundruð"
 "hunduð", "hundruð"
 "hungraðari", "hungraðri"
+"hungursneið", "hungursneyð"
+"hungursneiðar", "hungursneyðar"
 "Huston", "Houston"
 "huta", "hluta"
 "huti", "hluti"
@@ -1267,6 +1269,7 @@
 "Kúvaít", "Kúveit"
 "Kúveits", "Kúveits"
 "Kúvæt", "Kúveit"
+"kvá", "hvá"
 "LAkers", "Lakers"
 "landbúnaðaráðherra", "landbúnaðarráðherra"
 "landgraedsluskyrsla", "landgræðsluskýrsla"
@@ -1941,6 +1944,9 @@
 "Sjálfstæðislfokksins", "Sjálfstæðisflokksins"
 "Sjálfstæðsflokksins", "Sjálfstæðisflokksins"
 "sjálfsöðgu", "sjálfsögðu"
+"sjálfþurftarbúskapur", "sjálfsþurftarbúskapur"
+"sjálfsþurftabúskapur", "sjálfsþurftarbúskapur"
+"sjálfþurftabúskapur", "sjálfsþurftarbúskapur"
 "Sjálstæðisflokkurinn", "Sjálfstæðisflokkurinn"
 "sjéns", "séns"
 "sjítamúslíma", "sjítamúslima"
@@ -2299,6 +2305,12 @@
 "undirbúningu", "undirbúningur"
 "undirtekir", "undirtektir"
 "undnafarin", "undanfarin"
+"ungabarn", "ungbarn"
+"ungabarni", "ungbarni"
+"ungabarns", "ungbarns"
+"ungabörn", "ungbörn"
+"ungabörnum", "ungbörnum"
+"ungabarna", "ungbarna"
 "Unversal", "Universal"
 "updráttar", "uppdráttar"
 "uppbygginu", "uppbyggingu"
@@ -3277,6 +3289,7 @@ grundvallar innviðir
 græn gresi
 græn keri
 gull korn
+hátíðni hljóð
 heildar staða
 helgi dómur
 hlé megin
@@ -3397,6 +3410,7 @@ sér þekking
 sér þvottahús
 sí felldur
 sólar megin
+stúdents skírteini
 tor læs
 tví buri
 tví menningur
@@ -3415,6 +3429,7 @@ vel ferð
 vel kominn
 vel megun
 vel vild
+verkamanna starf
 vinnu herbergi
 vinnu sími
 víð átta
