--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -172,6 +172,7 @@
 "atvinnustarfssemi", "atvinnustarfsemi"
 "atvinnuþáttöku", "atvinnuþátttöku"
 "atvæði", "atkvæði"
+"auðveldarar", "auðveldara"
 "Audur", "Auður"
 "auganum", "auganu"
 "augnæknis", "augnlæknis"
@@ -721,6 +722,7 @@
 "fylgjst", "fylgjast"
 "fyr", "fyrir"
 "fyrirgefiði", "fyrirgefið"
+"fyrirhafnalaust", "fyrirhafnarlaust"
 "fyriri", "fyrir"
 "fyrirsætnana", "fyrirsætnanna"
 "fyrirtæja", "fyrirtækja"
@@ -2286,6 +2288,7 @@
 "Túngumál", "Tungumál"
 "túnísku", "túniskur"
 "túrmeriki", "túrmerik"
+"tvímannalaust", "tvímælalaust"
 "Týrol", "Týról"
 "umdaemin", "umdæmin"
 "umferði", "umferðir"
@@ -2293,7 +2296,7 @@
 "umfjöllunnar", "umfjöllunar"
 "umfjöllunni", "umfjölluninni"
 "umhverfisraduneyti", "umhverfisráðuneyti"
-"Umhverfisstofunar", "Imhverfisstofnunar"
+"Umhverfisstofunar", "Umhverfisstofnunar"
 "umjöllun", "umfjöllun"
 "umskurðsbanni", "umskurðarbanni"
 "umsækendur", "umsækjendur"
@@ -3273,6 +3276,13 @@ for maður
 for átta
 forkunnar fagur
 frum stæður
+full fljót
+full fljóta
+full fljótar
+full fljóti
+full fljóts
+full fljótum
+full fljótur
 full mikill
 furðu góður
 fárán leiki
@@ -3489,7 +3499,7 @@ for			+kk +kvk +hk +lo +so
 forkunnar   +kk +kvk +hk +lo +ao
 frum        +kk +kvk +hk +lo +so +ao
 # full		+kk +kvk +hk +lo +so +ao
-full		+kk +lo +so +ao             # Removed +kvk and +hk cf. 'full ástæða', 'full réttindi'
+full		+lo +so +ao                 # Removed +kk, +kvk and +hk cf. 'full ástæða', 'full réttindi', 'full eldmóðs'
 furðu		+lo
 gagn		+kk +kvk +hk +lo +so
 ger			+lo +so +ao					# Can attach to nouns, but uncommon.
@@ -3701,6 +3711,7 @@ að því tilefni              	$error(AÐAF, af því tilefni)
 að því tilskyldu            	$error(YI, að því tilskildu)
 beggja megin                	$error(WRONG_WORD, báðum megin) # eða beggja vegna
 björn í híði					$error(YI, björn í hýði)
+blöðum um það að flétta         $error(WRONG_WORD, blöðum um það að fletta)
 burtséð frá                 	$error(WRONG_PHRASE, að undanskildu)  # eða án tillits til
 bæn sýna uppfyllta				$error(YI, bæn sína uppfyllta)
 drauma sýna rætast				$error(YI, drauma sína rætast)
