--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ pip-delete-this-directory.txt
 
 # Unit test / coverage reports
 test.py
+test.txt
 htmlcov/
 .tox/
 .coverage
@@ -68,12 +69,12 @@ coverage.xml
 .pytest_cache/
 .mypy_cache/
 
-# Django stuff:
+# Django stuff
 *.log
 local_settings.py
 db.sqlite3
 
-# Flask stuff:
+# Flask stuff
 instance/
 .webassets-cache
 
