Updated documentation; bug fixes

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3679,6 +3679,7 @@ af hjartans list				$error(YI, af hjartans lyst)
 af einhverju leyti          	$error(AÐAF, að einhverju leyti)
 af engu leyti              		$error(AÐAF, að engu leyti)
 af mestu leyti              	$error(AÐAF, að mestu leyti)
+af mörgu leyti              	$error(AÐAF, að mörgu leyti)
 af miklu leyti              	$error(AÐAF, að miklu leyti)
 af neinu leyti              	$error(AÐAF, að neinu leyti)
 af þessu leyti              	$error(AÐAF, að þessu leyti)
@@ -3707,6 +3708,7 @@ að engu leiti               	$error(YI, að engu leyti)
 að þessu leiti               	$error(YI, að þessu leyti)
 að því leiti               		$error(YI, að því leyti)
 að mestu leiti					$error(YI, að mestu leyti)
+að mörgu leiti					$error(YI, að mörgu leyti)
 að miklu leiti              	$error(YI, að miklu leyti)
 að neinu leiti               	$error(YI, að neinu leyti)
 að verulegu leiti              	$error(YI, að verulegu leyti)
@@ -3826,6 +3828,10 @@ réttu megin                 	$error(WRONG_GENDER, réttum megin)
 skildi hundur heita				$error(YI, skyldi hundur heita)
 skini skroppin					$error(YI, skyni skroppin)
 skini skroppinn					$error(YI, skyni skroppinn)
+# The following correction is in fond memory of
+# https://kjarninn.is/skyring/2020-05-15-thad-er-ekki-haegt-ad-meta-storf-folks-bara-med-stimpilklukkunni/
+skrattinn úr sauðalæknum        $error(WRONG_WORD, skrattinn úr sauðarleggnum)
+skrattinn úr sauðarlæknum       $error(WRONG_WORD, skrattinn úr sauðarleggnum)
 skyldi ekki baun				$error(YI, skildi ekki baun)
 skyldi ekki bofs				$error(YI, skildi ekki bofs)
 skyldi ekki neitt				$error(YI, skildi ekki neitt)
