Updated context in errtokenizer.py with corrected tokens

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -2365,6 +2365,8 @@
 "veir", "tveir"
 "veirð", "verið"
 "veitingstaði", "veitingastaði"
+"veitingastaðs", "veitingastaðar"
+"veitingarstaðs", "veitingastaðar"
 "veiðgjöld", "veiðigjöld"
 "vekji", "veki"
 "vekjir", "vekir"
