--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,8 @@ install:
   - python -m pip install -e .
 
 script:
-  - if [ "$TRAVIS_PYTHON_VERSION" == "3.5" ]; then mypy src/reynir_correct/__init__.py; fi
+  - if [ "$TRAVIS_PYTHON_VERSION" == "3.5" ]; then python -m mypy --version; fi
+  - if [ "$TRAVIS_PYTHON_VERSION" == "3.5" ]; then python -m mypy src/reynir_correct/__init__.py; fi
   - python -m pytest
 
 notifications:
