Improvements as a result of testing with iceErrorCorpus

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3499,7 +3499,7 @@ allsherjar  +kk +kvk +hk
 alþjóða     +kk +kvk +hk                # With exceptions; Alþjóða póstmálastofnunin etc.
 and         +kk +kvk +hk +lo +so +ao
 # auka		+kk +kvk +hk				# Common verb
-auð			+kk +kvk +hk +lo +so +ao
+auð			+kk +kvk +hk +lo +so
 aðal        +kk +kvk +hk
 einka		+kk +kvk +hk
 endur		+kk +kvk +hk +so
@@ -3510,15 +3510,15 @@ for			+kk +kvk +hk +lo +so
 forkunnar   +kk +kvk +hk +lo +ao
 frum        +kk +kvk +hk +lo +so +ao
 # full		+kk +kvk +hk +lo +so +ao
-full		+lo +so +ao                 # Removed +kk, +kvk and +hk cf. 'full ástæða', 'full réttindi', 'full eldmóðs'
+full		+lo +so                     # Removed +kk, +kvk and +hk cf. 'full ástæða', 'full réttindi', 'full eldmóðs'; removed +ao cf. 'full af'
 furðu		+lo
 gagn		+kk +kvk +hk +lo +so
-ger			+lo +so +ao					# Can attach to nouns, but uncommon.
-gjör		+lo +so +ao					# Can attach to nouns, but uncommon.
+ger			+lo +so  					# Can attach to nouns, but uncommon.
+gjör		+lo +so 					# Can attach to nouns, but uncommon.
 hund		+lo
-hálf		+kk +kvk +hk +lo +so +ao
+hálf		+kk +kvk +hk +lo +so
 hámarks		+kk +kvk +hk
-jafn		+kk +kvk +hk +lo +so +ao
+jafn		+kk +kvk +hk +lo +so
 lang		+kk +kvk +hk +lo +so +ao	# Common with adj. and adv. in est. - langfallegastur
 langtíma	+kk +kvk +hk
 lágmarks	+kk +kvk +hk
@@ -3537,10 +3537,10 @@ sam         +kk +kvk +hk +lo +so +ao
 # saman		+lo		                    # Allow 'samansúrraður', 'samansaumuð'
 skammtíma	+kk +kvk +hk
 # sér		+kk +kvk +hk				# TODO The pronoun is too common. Have to deal with these errors later.
-sí          +kk +kvk +hk +lo +so +ao
+sí          +kk +kvk +hk +lo +so
 tor         +kk +kvk +hk +lo +so +ao
 uppáhalds	+kk +kvk +hk
-van         +kk +kvk +hk +lo +so +ao
+van         +kk +kvk +hk +lo +so
 vara		+kk +kvk +hk
 # vel		+kk +kvk +hk -lo +so -ao	# TODO Too common as an independent word.
 ágætis		+kk +kvk +hk
