Dropped support for Python 3.5

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,16 @@ cache: pip
 dist: xenial
 
 python:
-  - "3.5"
   - "3.6"
   - "3.7"
   - "3.8"
+  - "3.9-dev"
   - "pypy3"
 
 before_install:
   - python -m pip install --upgrade pip
   - python -m pip install --upgrade pytest
-  - if [ "$TRAVIS_PYTHON_VERSION" == "3.5" ]; then python -m pip install mypy; fi
+  - if [ "$TRAVIS_PYTHON_VERSION" == "3.6" ]; then python -m pip install mypy; fi
   - python -m pip install git+https://github.com/mideind/Tokenizer#egg=tokenizer
   - python -m pip install git+https://github.com/mideind/Icegrams#egg=icegrams
   - python -m pip install git+https://github.com/mideind/ReynirPackage#egg=reynir
@@ -23,7 +23,7 @@ install:
   - python -m pip install -e .
 
 script:
-  - if [ "$TRAVIS_PYTHON_VERSION" == "3.5" ]; then python -m mypy src/reynir_correct/__init__.py; fi
+  - if [ "$TRAVIS_PYTHON_VERSION" == "3.6" ]; then python -m mypy src/reynir_correct/__init__.py; fi
   - python -m pytest
 
 notifications:
