Experiment with different Travis CI config

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3883,6 +3883,7 @@ við líði                    	$error(YI, við lýði)
 öll sömun						$error(WRONG_WORD, öllsömul)
 þar til yfir líkur				$error(YI, þar til yfir lýkur)
 það vil                     	$error(WRONG_PERSON, það vill)
+þessi aðilar                    $error(WRONG_FORM, þessir aðilar)
 þíðir ekkert að					$error(YI, þýðir ekkert að)
 þýða í ísinn					$error(YI, þíða í ísinn)
 
