--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ python:
   - "pypy3"
 
 before_install:
-  - apt install git-lfs
+  - apt-get install git-lfs
   - python -m pip install --upgrade pip
   - python -m pip install --upgrade pytest
   - if [ "$TRAVIS_PYTHON_VERSION" == "3.6" ]; then python -m pip install mypy; fi
