--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,86 @@ language: python
 
 cache: pip
 
-os: linux
-virt: lxd 
-dist: focal
-arch: arm64
-group: edge
+jobs:
+  include:
+    # Linux
+    - name: "Linux (Python 3.6)"
+      os: linux
+      python: 3.6
+      dist: xenial
 
-python:
-  - "3.6"
-  - "3.7"
-  - "3.8"
-  - "3.9-dev"
-  - "pypy3"
+    - name: "Linux (Python 3.7)"
+      os: linux
+      python: 3.7
+      dist: xenial
+
+    - name: "Linux (Python 3.8)"
+      os: linux
+      python: 3.8
+      dist: xenial
+
+    - name: "Linux (Python 3.9-dev)"
+      os: linux
+      python: 3.9-dev
+      dist: xenial
+
+    - name: "Linux (PyPy3)"
+      os: linux
+      python: pypy3
+      dist: xenial
+
+      # macOS
+    - name: "macOS (PyPy3 - Xcode 12)"
+      os: osx
+      language: generic  # 'language: python' is an error on Travis CI macOS
+      osx_image: xcode12
+      before_install:
+        - brew install git-lfs
+        - git lfs install
+        - brew install pypy3
+        - pip install virtualenv
+        - /usr/local/bin/virtualenv -p /usr/local/bin/pypy3 venv
+        - source venv/bin/activate
+        - python -m pip install --upgrade pytest
+        - python -m pip install git+https://github.com/mideind/Tokenizer#egg=tokenizer
+        - python -m pip install git+https://github.com/mideind/Icegrams#egg=icegrams
+        - python -m pip install git+https://github.com/mideind/GreynirPackage#egg=reynir
+      before_script:
+        - git lfs pull
+
+    - name: "macOS (Python 3.8 - Xcode 11)"
+      os: osx
+      language: generic  # 'language: python' is an error on Travis CI macOS
+      osx_image: xcode11.6
+      before_install:
+        - brew install git-lfs
+        - git lfs install
+        - brew upgrade python@3.8
+        - pip install virtualenv
+        - /usr/local/bin/virtualenv -p /usr/local/bin/python3.8 venv
+        - source venv/bin/activate
+        - python -m pip install --upgrade pytest
+        - python -m pip install git+https://github.com/mideind/Tokenizer#egg=tokenizer
+        - python -m pip install git+https://github.com/mideind/Icegrams#egg=icegrams
+        - python -m pip install git+https://github.com/mideind/GreynirPackage#egg=reynir
+      before_script:
+        - git lfs pull
+
+    # Windows
+    - name: "Windows (Python 3.8)"
+      os: windows
+      language: shell  # 'language: python' is an error on Travis CI Windows
+      before_install:
+        - choco install python --version 3.8.0
+        - python --version
+        - python -m pip install --upgrade pip
+        - pip3 install --upgrade pytest
+        - python -m pip install git+https://github.com/mideind/Tokenizer#egg=tokenizer
+        - python -m pip install git+https://github.com/mideind/Icegrams#egg=icegrams
+        - python -m pip install git+https://github.com/mideind/GreynirPackage#egg=reynir
+      env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
 
 before_install:
-  - apt-get install git-lfs
   - python -m pip install --upgrade pip
   - python -m pip install --upgrade pytest
   - if [ "$TRAVIS_PYTHON_VERSION" == "3.6" ]; then python -m pip install mypy; fi
