Fixed type annotations in eval.py; added 'hvorttveggja' to config file

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3005,6 +3005,7 @@ yrði
 "hvortannað", "hvort annað"
 "hvorteðer", "hvort eð er"
 "hvortveggja", "hvort tveggja"
+"hvorttveggja", "hvort tveggja"
 "hvorutveggja", "hvort tveggja"
 "hálfsmánaðar", "hálfs mánaðar"
 "hálfsárs", "hálfs árs"
