--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3564,7 +3564,7 @@ Búddisti
 Eskimói
 Islam
 Íslam
-Gyðingur
+# Gyðingur 		# can also be lower-case, so maybe not include this 
 Helvíti
 Himnaríki
 Kaþólska
@@ -3582,6 +3582,126 @@ sjálfstæðismaður
 Lenínismi
 Marxismi
 Darwinismi
+Heimsstyrjöld	# Fyrri/Seinni/Síðari Heimsstyrjöld
+Stríð 			# Kalda Stríðið
+Heimsveldi
+Bylting
+Uppreisn
+Meistaradeild
+Kreppa
+Endurreisn
+Jörð
+Tungl
+
+# Holidays
+# Unnecessary to include: föstudagurinn langi
+# Unable to include: annar í páskum, sumardagurinn fyrsti, baráttudagur verkalýðsins, annar í hvítasunnu, frídagur verslunarmanna, fyrsti vetrardagur, dag íslenskrar tungu, annar í jólum
+
+Nýársdagur
+Þrettándi
+Bóndadagur
+Konudagur
+Bolludagur
+Sprengidagur
+Öskudagur
+Páskar
+Pálmasunnudagur
+Skírdagur
+Páskadagur
+Mæðradagur
+Uppstigningardagur
+Hvítasunnudagur
+Hvítasunna
+Sjómannadagur
+Þjóðhátíðardagur
+Verslunarmannahelgi
+Gleðiganga
+Menningarnótt
+Hrekkjavaka
+Feðradagur
+Fullveldisdagur
+Jól
+Aðfangadagur
+Aðfangadagskvöld
+Jóladagur
+Áramót
+Gamlársdagur
+jónsmessa
+valentínusardagur
+þorláksmessa
+
+# Job titles
+# Unable to include: félags- og barnamálaráðherra, fjármála- og efnahagsráðherra, utanríkis- og þróunarsamvinnuráðherra, utanríkis- og þróunarsamvinnuráðherra, umhverfis- og auðlindaráðherra, sjávarútvegs- og landbúnaðarráðherra, mennta- og menningarmálaráðherra, samgöngu- og sveitarstjórnarráðherra, ferðamála-, iðnaðar- og nýsköpunarráðherra, sérstakur saksóknari, sr., hr.
+
+Ráðherra
+Dómsmálsráðherra
+Félagsmálaráðherra
+Barnamálaráðherra
+Fjármálaráðherra
+Efnahagsráðherra
+Utanríkisráðherra
+Umhverfisráðherra
+Forsætisráðherra
+Sjávarútvegsráðherra
+Landbúnaðarráðherra
+Menntamálaráðherra
+Menningarmálaráðherra
+Samgönguráðherra
+Sveitarstjórnarráðherra
+Heilbrigðisráðherra
+Forseti
+Saksóknari
+Ríkissaksóknari
+Aðalsaksóknari
+Konungur
+Kanslari
+Formaður
+Hreppstjóri
+Séra    
+Herra
+Frú
+Alþingismaður
+Biskup
+Borgarstjóri
+Doktor
+Hæstaréttardómari
+Landlæknir
+Prestur
+Prófessor
+Sýslumaður
+Lögreglustjóri
+Ríkislögreglustjóri
+
+# Weekdays
+
+Mánudagur
+Þriðjudagur
+Miðvikudagur
+Fimmtudagur
+Föstudagur
+Laugardagur
+Sunnudagur
+
+# School subjects
+
+Eðlisfræði
+Efnafræði
+Félagsfræði
+Hagfræði
+Íþróttir
+Jarðfræði
+Kvikmyndafræði
+Landafræði
+Latína
+Líffræði
+Lýðheilsufræði
+Myndlist
+Næringarfræði
+Saga
+Samfélagsfræði
+Sálfræði
+Stærðfræði
+Viðskiptafræði
 
 # !!! TODO: Expand following list of countries and related adjectives
 
@@ -3639,6 +3759,226 @@ Litháenskur
 kanada
 kanadamaður
 Kanadískur
+spánn
+Spænskur
+japan
+Japanskur
+
+# Language families
+# Unable to include: afróasískur, aímarískur, algískur, altískur, ástró-asískur, ástronesískur, dravidískur, dravídamál, eskimó-aleútískur, karíbamál, nígerkongómál, nílósaharamál, sinó-tíbetskur, suðurkákasískur, túpímál
+
+Indóevrópskur
+Semískur
+Úralskur
+
+# Context-free lower-case (ritregla 1.3.3.2)
+
+# Animals
+Abyssiníuköttur
+Alaskaufsi
+Balíköttur
+Bengalköttur
+Dalmatíuhundur
+Dingóhundur
+Dóbermannhundur
+Galloway-nautgripur
+Herefordnautgripur
+Jakobsfiskur
+Jövuköttur
+Kolkuóshross
+Labradorhundur
+Maríubjalla
+Maríudepla
+Maríuerla
+Maríuhæna
+Mývatnssilungur
+Nýfundnalandshundur
+Óðinshani
+Pýreneahundur
+rottweiler-hundur
+Sanktibernharðshundur
+Setterhundur
+Síamsköttur
+Sómalíuköttur
+Spánarsnigill
+Spaníelhundur
+Stóridani
+Svaðastaðahross
+Terríerhundur
+Þingvallamurta
+Þórshani
+
+# Plants
+Alaskalúpína
+Alaskavíðir
+Alaskaösp
+Aronsvöndur
+Baldursbrá
+Brekkumaríustakkur
+Davíðslykill
+Dvergsóley
+Engjamaríustakkur
+Fjallakobbi
+Freyjubrá
+Friggjargras
+Gullauga
+Gullbrá
+Hvítárlax
+Ingimarsfífill
+Íslandsfífill
+Jakobsfífill
+Jakobsstigi 
+Lokasjóður
+Maríugrös
+Maríulykill
+Maríustakkur
+Maríusvunta
+Maríuvendlingur
+Maríuvöndur
+Maríuvöttur
+Mývatnsgrös
+Ólafsrauðar
+Ólafssúra
+Ránarkambur
+Ránarkjarni
+Rauðsmári
+Snækobbi
+Spánarkerfill
+Stefánssól
+Steindórssól
+Tírólamerla
+Týsfjóla
+Unnarfaldur
+Ægissigð
+
+# Food
+Armaníak
+Basmatíhrísgrjón
+Bayonne-skinka
+Berlínarbolla
+Béarnaise-sósa
+Bolognasósa
+Bordóvín
+Búrbonviskí
+Dijon-sinnep
+Gádaostur
+Genúakaka
+Gíneupipar
+Gorgonsólaostur
+Grahams-mjöl
+Hamborgari
+Hólsfjallahangikjöt
+Jaffaappelsínur
+Jalapenjo
+Jövukaffi
+Kalamataólífur
+Kamembertostur
+Kampavín
+Kasjúhneta
+Keníukaffi
+Kínakál
+Kínarúlla
+Kólumbíukaffi
+Lasanja
+Londonlamb
+Madeirasósa
+Madeiravín
+Móselvín
+Napóleonshattur
+Napóleonskaka
+Ólafsrauðar
+Parmaostur
+Parmaskinka
+Pekingönd
+Rínarvín
+Roquefort-ostur
+Skalottlaukur
+Stroganoffbuff
+Vínarbrauð
+Vínarpylsa
+Vínarsnitsel
+Vínarterta
+Waldorf-salat
+Worcester-sósa
+
+# Medical terms
+Akureyrarveikin
+Alzheimers-sjúkdómur
+Asíuflensa
+Downs-heilkenni
+Fuglaflensa
+Hermannaveiki
+Inflúensa
+Langerhanseyjar
+Liðagigt
+Parkinsonsveiki
+Stokkhólmsheilkenni
+Sóríasis
+
+# Religious terms (some have already been listed)
+Ágústínar
+Ásatrú
+Ásatrúarmaður
+Benediktínar
+Búddismi
+Dadaismi
+Frjálshyggja
+Fransiskanar
+Guðspekingur
+Húgenotti
+Jafnaðarstefna
+Kalvínismi
+Kalvínisti
+Kalvínstrú
+Kúbismi
+Kvekari
+Lúterska
+Póstmódernismi
+Raunsæi
+Raunsæismaður
+Rómantík
+Sósíalismi
+
+# Political terms (some have already been listed)
+Fasismi
+Lenínisti
+Maóismi
+Maóisti
+Panslavismi
+Sósíalisti
+Stalínismi
+Stalínisti
+Thatcherismi
+Trotskíisti
+Valtýska
+
+# Terms derived from proper names
+Adamsepli
+Akkillesarhæll
+Alpagrein
+Aulabárður
+Bermúdabuxur
+Biblíufróður
+Bögubósi
+Dísilbifreið
+Evuklæði
+Gordíonshnútur
+Grettistak
+Gróusaga
+Gvendarbrunnur
+Hrunadans
+Kaupahéðinn
+Kínaskór
+Kvislingur
+Lygamörður
+Maríutása
+Röntgenmynd
+Salómonsdómur
+Síamstvíburar
+Svikahrappur
+Þórðargleði
+Þyrnirósarsvefn
+Ökuþór
 
 
 [taboo_words]
