further additions to config file

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3660,7 +3660,6 @@ Hreppstjóri
 Séra    
 Herra
 Frú
-Alþingismaður
 Biskup
 Borgarstjóri
 Doktor
@@ -3671,6 +3670,8 @@ Prófessor
 Sýslumaður
 Lögreglustjóri
 Ríkislögreglustjóri
+Alþingismaður
+Alþingiskona
 
 # Weekdays
 
@@ -3702,6 +3703,23 @@ Samfélagsfræði
 Sálfræði
 Stærðfræði
 Viðskiptafræði
+
+# Committees, departments, etc.
+
+Óbyggðanefd
+Skemmtinefnd
+Öryggisráð
+Sambandsráð
+Ráðherraráð
+Ríkisráð
+Slysadeild
+Öldungadeild
+Fulltrúadeild
+Fæðingardeild
+Allsherjarþing
+Þjóðþing
+Fulltrúaþing
+Sambandslög
 
 # !!! TODO: Expand following list of countries and related adjectives
 
@@ -3781,7 +3799,7 @@ Bengalköttur
 Dalmatíuhundur
 Dingóhundur
 Dóbermannhundur
-Galloway-nautgripur
+# Galloway-nautgripur
 Herefordnautgripur
 Jakobsfiskur
 Jövuköttur
@@ -3854,18 +3872,18 @@ Unnarfaldur
 # Food
 Armaníak
 Basmatíhrísgrjón
-Bayonne-skinka
+# Bayonne-skinka
 Berlínarbolla
-Béarnaise-sósa
+# Béarnaise-sósa
 Bolognasósa
 Bordóvín
 Búrbonviskí
-Dijon-sinnep
+# Dijon-sinnep
 Gádaostur
 Genúakaka
 Gíneupipar
 Gorgonsólaostur
-Grahams-mjöl
+# Grahams-mjöl
 Hamborgari
 Hólsfjallahangikjöt
 Jaffaappelsínur
@@ -3886,26 +3904,27 @@ Madeiravín
 Móselvín
 Napóleonshattur
 Napóleonskaka
-Ólafsrauðar
 Parmaostur
 Parmaskinka
 Pekingönd
 Rínarvín
-Roquefort-ostur
+# Roquefort-ostur
 Skalottlaukur
 Stroganoffbuff
 Vínarbrauð
 Vínarpylsa
 Vínarsnitsel
 Vínarterta
-Waldorf-salat
-Worcester-sósa
+# Waldorf-salat
+# Worcester-sósa
 
 # Medical terms
 Akureyrarveikin
-Alzheimers-sjúkdómur
+Alzheimers
+# Alzheimers-sjúkdómur
 Asíuflensa
-Downs-heilkenni
+Downs
+# Downs-heilkenni
 Fuglaflensa
 Hermannaveiki
 Inflúensa
